Snap scroll origin towards beginning of content

With the existing snapping code, it's possible that an RTL block
with non-pixel-aligned size will have a MaximumScrollOffset which is
-1 instead of zero. The resulting geometry is entirely
self-consistent and not web visible, but it can cause a spurious
scroll event to be fired when clamping the scroll offset in response
to a style/layout change.

BUG=915503

Change-Id: Ib760cecb3e14cc9b675ee0769139bb65c3ecb30f
Reviewed-on: https://chromium-review.googlesource.com/c/1382867
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Stefan Zager <szager@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618277}
Former-commit-id: 1d101abd42d9d4fca49bc7328d0c934ddc392a9a