third_party/blink/renderer/core/paint/paint_layer_scrollable_area.cc
@@ -832,7 +832,7 @@ void PaintLayerScrollableArea::UpdateScrollOrigin() {
   LayoutRect scrollable_overflow(overflow_rect_);
   scrollable_overflow.Move(-GetLayoutBox()->BorderLeft(),
                            -GetLayoutBox()->BorderTop());
-  IntPoint new_origin(-scrollable_overflow.PixelSnappedLocation() +
+  IntPoint new_origin(FlooredIntPoint(-scrollable_overflow.Location()) +
                       GetLayoutBox()->OriginAdjustmentForScrollbars());
   if (new_origin != scroll_origin_)
     scroll_origin_changed_ = true;
